# iPanel

./: .bandit  .commitlintrc.json  .releaserc.json  CHANGELOG.md  CI_CD_IMPLEMENTATION_SUMMARY.md  Dockerfile  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  license.txt  package-lock.json  package.json  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  cloud_integration.md  documentation.md  feature_request.md  rebrand_issue.md  security_issue.md
.github/workflows/: ci-cd.yml  docker-release.yml  main.yml  release.yml  security-scan.yml
announcements/: blog-post-ipanel-v8.0.0.md  hypr-engineering-announcement.md  social-media-announcement.md
docker/: gunicorn.conf.py  nginx.prod.conf  prometheus.yml
docs/: CI_CD_SETUP.md  api-reference.md  index.md  installation.md
iPanel/: .env.example  .gitignore  CHANGELOG.md  DEVELOPMENT.md  INSTALLATION_FIXES.md  README.md  SECURITY.md  VERSION  diagnose_installation.sh  fix_installation.sh  init.sh  install.sh  install_fix_comprehensive.sh  quick_fix.sh  requirements.txt  runconfig.py  runserver.py  task.py  test_server.py  tools.py
iPanel/BTPanel/: __init__.py  app.py
iPanel/class/: acme_v2.py  ajax.py  apache.py  backup_bak.py  common.py  config.py  crontab.py  crontab_ssl.py  data.py  database.py  datatool.py  db.py  db_mysql.py  downloadFile.py  fastcgiClient.py  file_execute_deny.py  files.py  firewall_new.py  firewalld.py  firewalls.py  flask_compress.py  ftp.py  ftplog.py  http_requests.py  jobs.py  lang.py  log_analysis.py  mailUnsubscribe.py  monitor.py  nginx.py  ols.py  one_key_wp.py  page.py  panelAes.py  panelApi.py  panelAuth.py  panelBackup.py  panelController.py  panelDatabaseController.py  panelDefense.py  (+59 more)
iPanel/class_v2/: acme_v3.py  ajax_v2.py  apache_v2.py  backup_bak_v2.py  breaking_through.py  cloud_stora_upload_v2.py  common_v2.py  config_v2.py  crontab_ssl_v2.py  crontab_v2.py  data_v2.py  database_v2.py  datatool_v2.py  db_mysql_v2.py  db_v2.py  dk_db.py  download_file_v2.py  fastcgi_client_two_v2.py  fastcgi_client_v2.py  file_execute_deny_v2.py  files_v2.py  firewall_new_v2.py  firewalld_v2.py  firewalls_v2.py  flask_sockets_v2.py  ftp_log_v2.py  ftp_v2.py  http_requests_v2.py  jobs_v2.py  letsencrypt_v2.py  log_analysis_v2.py  monitor_v2.py  one_key_wp_v2.py  panelControllerV2.py  panelDatabaseControllerV2.py  panelDockerControllerV2.py  panelFireControllerV2.py  panelModControllerV2.py  panelProjectControllerV2.py  panelSafeControllerV2.py  (+31 more)
iPanel/config/: api.json  config.json  crontab.json  databases.json  dns_api_init.json  docker_project_info.json  hosts.json  lib.json  menu.json  php_versions.json  safe_autofix.json  script_types.json  task.json
iPanel/core/: __init__.py  exceptions.py
iPanel/data/: 404.html  502.html  defaultDoc.html  empty.html  home.json  libList.conf  list.json  msg.json  node.json  pay_type.json  phplib.json  type.json  warning.json
iPanel/install/: install_soft.sh  public.sh
iPanel/mod/: modController.py
iPanel/script/: BT-FirewallServices.py  GetOS.sh  backup.py  breaking_through_check.py  check_msg.py  createSsl.py  cron_scaning.py  crontab_task_exec.py  dk_log_split.py  ftp.sh  ftplogs_cut.py  init_firewall.sh  install.sh  install_pycountry.sh  install_pyroute2.sh  log_task_analyzer.py  logsBackup.py  mail_task.py  mysql_quota.py  open_malicious_ip.sh  panel_ssl_task.py  polkit_upgrade.py  process_network_total.py  push_msg.py  rememory.sh  restart_services.py  run_script.py  scan_log.py  second_task.py  site_task.py  sync_time.py  upgrade_firewall.py  upgrade_flask.sh  upgrade_gevent.sh  upgrade_telegram.sh  vhost_virtual.py  warning_list.py  webserver-ctl.sh  (+1 more)
scripts/: version_manager.py
tests/: __init__.py  test_basic.py
(+2694 files in other folders)
